--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,13 @@ h3 {
 header nav a {
     text-decoration: none;
     display: block;
-    color: #2f2f2f;
     text-transform: uppercase;
     font-size: 70%;
+    color: black;
+}
+
+h4 {
+    color: #fa2020;
 }
 
 nav {}
